# GoodPractices

./: .gitignore  README.md
TestClassInteractions/: CMakeLists.txt  DependencyInterface.cpp  HeavyDependency.h  README.md  TestDependency.cpp  TestDependency.h  UserClass.h  main.cpp  test.m.cpp
TestClassInteractions/libfoo/: CMakeLists.txt  DependencyInterface.h  HeavyDependency.cpp  UserClass.cpp  UserClass.h
TestClassInteractions/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TestClassInteractions/test/unit_tests/: CMakeLists.txt  Makefile  MockHeavyDependency.h  TestHeaveDependency.cpp  TestHeaveDependency.h  TestHeavyDependency.cpp  TestHeavyDependency.h  cmake_install.cmake
